Polishing, fix readme, add dark mode

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 html, body{
-    background-image: url("webb.png");
+    background-image: url("../images/webb.png");
     height: 100%;
 }
 
